Updated the base and USE THIS files

--- a/USE_THIS.html
+++ b/USE_THIS.html
@@ -1,15 +1,14 @@
 {% extends 'base.html' %}
 
-{% block head %}
 
+{% block title %} INSERT TITLE HERE {% endblock %}
+
+
+{% block scripts %}
 INSERT CUSTOM SCRIPTS HERE!
-
 {% endblock %}
 
 
-
-{% block body %}
-
+{% block content %}
 INSERT CUSTOM BODY CONTENT HERE!
-
 {% endblock %}
