--- a/email/confirmation.html
+++ b/email/confirmation.html
@@ -5,7 +5,7 @@
     <p>Thank you for signing up with Tourisit. Please confirm your email address with the link below to activate your account.
     </p>
     <div class="emailCode">
-        {confirmation_url}
+        <a href="{confirmation_url}">{confirmation_url}</a>
     </div>
     <br>
     <small>If you did not request for this email, you may ignore this.</small>
