--- a/email/confirmation.html
+++ b/email/confirmation.html
@@ -2,7 +2,8 @@
 <div class="box">
     <a href="https://tourisit.ichiharu.com"><p class="is-pacifico">Tourisit</p></a>
     <h2 style="margin-top: 0;">Confirm your Email</h2>
-    <p>Thank you for signing up with Tourisit. Please confirm your email address with the link below to activate your account.
+    <p>Thank you for signing up with Tourisit. Please confirm your email address with the link below to activate your
+        account.
     </p>
     <div class="emailCode">
         <a href="{confirmation_url}">{confirmation_url}</a>
