Fix routing & URLs

--- a/email/confirmation.html
+++ b/email/confirmation.html
@@ -1,6 +1,6 @@
 <body>
 <div class="box">
-    <a href="https://tourisit.ichiharu.com"><p class="is-pacifico">Tourisit</p></a>
+    <a href="https://tourisit.hiy.sh"><p class="is-pacifico">Tourisit</p></a>
     <h2 style="margin-top: 0;">Confirm your Email</h2>
     <p>Thank you for signing up with Tourisit. Please confirm your email address with the link below to activate your
         account.
