--- a/email/pwdreset.html
+++ b/email/pwdreset.html
@@ -1,6 +1,6 @@
 <body>
 <div class="box">
-    <a href="https://tourisit.ichiharu.com"><p class="is-pacifico">Tourisit</p></a>
+    <a href="https://tourisit.hiy.sh"><p class="is-pacifico">Tourisit</p></a>
     <h2 style="margin-top: 0;">Password reset requested</h2>
     <p>A password reset had been requested for your account. Click the link below to reset password.
     </p>
